--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "shop-api",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "start:test": "NODE_ENV=test node index.js",
     "dev": "nodemon index.js",
-    "seed": "node fixtures.js"
+    "seed": "node fixtures.js",
+    "seed:test": "NODE_ENV=test node fixtures.js"
   },
   "keywords": [],
   "author": "",
@@ -15,11 +17,11 @@
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "mime-types": "^2.1.34",
-    "mongoose": "^6.2.1",
+    "express": "^4.17.3",
+    "image-downloader": "^4.1.0",
+    "mongoose": "^6.2.4",
     "multer": "^1.4.4",
-    "nanoid": "^3.2.0"
+    "nanoid": "^3.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
