--- a/front/angular.json
+++ b/front/angular.json
@@ -65,6 +65,14 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "bdd": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.bdd.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -77,6 +85,9 @@
             },
             "development": {
               "browserTarget": "front:build:development"
+            },
+            "bdd": {
+              "browserTarget": "front:build:bdd"
             }
           },
           "defaultConfiguration": "development"
