--- a/front/package.json
+++ b/front/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:test": "ng serve --configuration bdd --port 4210",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -24,6 +25,7 @@
     "@ngrx/effects": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "angularx-social-login": "^4.1.0",
+    "ng-validate-equal": "^6.0.1",
     "ngrx-store-localstorage": "^13.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
